intel/bench_214/extr_.FFmpeglibavcodecpngdec.c_handle_small_bpp_with_main/log.txt
bench_214/extr_.FFmpeglibavcodecpngdec.c_handle_small_bpp_with_main/extr_.FFmpeglibavcodecpngdec.c_handle_small_bpp_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.FFmpeglibavcodecpngdec.c_handle_small_bpp_with_main/extr_.FFmpeglibavcodecpngdec.c_handle_small_bpp_with_main.c:33:48: warning: operator '>>' has lower precedence than '-'; '-' will be evaluated first [-Wshift-op-parentheses]
                    pd[8*i + k - 1] = (pd[i]>>8-k) & 1;
                                            ~~~^~
bench_214/extr_.FFmpeglibavcodecpngdec.c_handle_small_bpp_with_main/extr_.FFmpeglibavcodecpngdec.c_handle_small_bpp_with_main.c:33:48: note: place parentheses around the '-' expression to silence this warning
                    pd[8*i + k - 1] = (pd[i]>>8-k) & 1;
                                               ^
                                              (  )
1 warning and 1 error generated.
HLS FPGA Parse FAILED.
